--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">AD</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="/assets/img/logo.png"></a></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -58,10 +58,9 @@
       </nav><!-- .navbar -->
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
+        <a href="https://www.facebook.com/de6ev" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
+        <a href="https://instagram.com/tdeshev?igshid=YmMyMTA2M2Y=" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/deshev/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></i></a>
       </div>
 
     </div>
