add audio to site

--- a/about.html
+++ b/about.html
@@ -42,17 +42,17 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="/assets/img/logo.png"></a></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="../desitynikolova.github.io/assets/img/logo.png"></a></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About me</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
+          <li><a class="active" href="/desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
+          <li><a href="/desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
+          <li><a href="/desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
+          <li><a href="/desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,8 +74,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>As a business analyst, my focus is on understanding the inner workings of an organization and identifying areas for improvement. Through careful analysis of data and market trends, I strive to uncover opportunities for growth and innovation.</p>
+          <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">About</h2>
+          <p onmouseover="readText(this)" onmouseleave="stopRead(this)">As a business analyst, my focus is on understanding the inner workings of an organization and identifying areas for improvement. Through careful analysis of data and market trends, I strive to uncover opportunities for growth and innovation.</p>
         </div>
 
         <div class="row">
@@ -83,29 +83,29 @@
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Business Analyst</h3>
-            <p class="fst-italic">
+            <h3 onmouseover="readText(this)" onmouseleave="stopRead(this)">Business Analyst</h3>
+            <p class="fst-italic" onmouseover="readText(this)" onmouseleave="stopRead(this)">
               My work is driven by a deep curiosity and a passion for problem-solving. I am always looking for ways to streamline processes, optimize resources, and enhance overall performance. Whether I am analyzing financial statements or conducting customer research, my goal is always to deliver actionable insights that drive positive change.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Birthday:</strong> 14 April 1989</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Phone:</strong> +359833924545</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>City:</strong> Sofia, Bulgaria</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Birthday:</strong> 14 April 1989</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Website:</strong> www.example.com</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Phone:</strong> +359833924545</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">City:</strong> Sofia, Bulgaria</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Age:</strong> 34</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> deshevanatoliy@gmail.com</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Freelance:</strong> Available</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Age:</strong> 34</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Degree:</strong> Master</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Email:</strong> deshevanatoliy@gmail.com</li>
+                  <li onmouseover="readText(this)" onmouseleave="stopRead(this)"><i class="bi bi-rounded-right"></i> <strong onmouseover="readText(this)" onmouseleave="stopRead(this)">Freelance:</strong> Available</li>
                 </ul>
               </div>
             </div>
-            <p>
+            <p onmouseover="readText(this)" onmouseleave="stopRead(this)">
               As a business analyst, I am constantly learning and evolving, always seeking out new challenges and opportunities to grow. I am proud to be a part of the dynamic and ever-changing world of business, and I look forward to continuing to make a difference through my work.
             </p>
           </div>
@@ -119,7 +119,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Skills</h2>
+          <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">Skills</h2>
         </div>
 
         <div class="row skills-content">
@@ -127,21 +127,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Business Analysis <i class="val">100%</i></span>
+              <span class="skill" onmouseover="readText(this)" onmouseleave="stopRead(this)">Business Analysis <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Microsoft Excel <i class="val">100%</i></span>
+              <span class="skill" onmouseover="readText(this)" onmouseleave="stopRead(this)">Microsoft Excel <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Analytical Skills <i class="val">80%</i></span>
+              <span class="skill" onmouseover="readText(this)" onmouseleave="stopRead(this)">Analytical Skills <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -152,21 +152,21 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">Team Leadership <i class="val">85%</i></span>
+              <span class="skill" onmouseover="readText(this)" onmouseleave="stopRead(this)">Team Leadership <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Financial Reporting <i class="val">90%</i></span>
+              <span class="skill" onmouseover="readText(this)" onmouseleave="stopRead(this)">Financial Reporting <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Social Media <i class="val">80%</i></span>
+              <span class="skill" onmouseover="readText(this)" onmouseleave="stopRead(this)">Social Media <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -184,7 +184,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
+          <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">Testimonials</h2>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -193,11 +193,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>John Smith</h3>
-                <h4>CEO of ABC Company</h4>
+                <h3 onmouseover="readText(this)" onmouseleave="stopRead(this)">John Smith</h3>
+                <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">CEO of ABC Company</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Anatoliy is a game-changer. His/her expertise helped us uncover valuable insights that drove significant growth for our company.
+                  <span onmouseover="readText(this)" onmouseleave="stopRead(this)">Anatoliy is a game-changer. His/her expertise helped us uncover valuable insights that drove significant growth for our company.</span>
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -206,11 +206,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sarah Jones</h3>
-                <h4>Data Scientist at XYZ Corporation</h4>
+                <h3 onmouseover="readText(this)" onmouseleave="stopRead(this)">Sarah Jones</h3>
+                <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Data Scientist at XYZ Corporation</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I was blown away by Anatoliy's technical skills and attention to detail. He provided actionable insights from large, complex datasets.
+                  <span onmouseover="readText(this)" onmouseleave="stopRead(this)">I was blown away by Anatoliy's technical skills and attention to detail. He provided actionable insights from large, complex datasets.</span>
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -219,11 +219,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Emily Chen</h3>
-                <h4>Director of Marketing at DEF Enterprises</h4>
+                <h3 onmouseover="readText(this)" onmouseleave="stopRead(this)">Emily Chen</h3>
+                <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Director of Marketing at DEF Enterprises</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  What sets Anatoliy apart is his ability to understand the big picture of our business. He is a true partner.
+                  <span onmouseover="readText(this)" onmouseleave="stopRead(this)">What sets Anatoliy apart is his ability to understand the big picture of our business. He is a true partner.</span>
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -240,7 +240,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" id="footer-audio" onmouseover="readText(this)" onmouseleave="stopRead(this)">
         &copy; Copyright <strong><span>Desislava Nikolova</span></strong>. All Rights Reserved
       </div>
     </div>
@@ -261,7 +261,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="assets/js/script-audio.js"></script>
 </body>
-
 </html>
