--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="./assets/img/logo.png"></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="../desitynikolova.github.io/assets/img/logo.png"></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="about.html">About me</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a class="active" href="/desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
+          <li><a href="/desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
+          <li><a href="/desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
+          <li><a href="/desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
+          <li><a href="/desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -70,16 +70,16 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Anatoliy Deshev</h1>
-      <h2>I'm a Business Analyst from Bulgaria</h2>
-      <a href="about.html" class="btn-about">About Me</a>
+      <h1 onmouseover="readText(this)" onmouseleave="stopRead(this)">Anatoliy Deshev</h1>
+      <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">I'm a Business Analyst from Bulgaria</h2>
+      <a href="about.html" class="btn-about" onmouseover="readText(this)" onmouseleave="stopRead(this)">About Me</a>
     </div>
   </section><!-- End Hero -->
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" onmouseover="readText(this)" onmouseleave="stopRead(this)">
         &copy; Copyright <strong><span>Desislava Nikolova</span></strong>. All Rights Reserved
       </div>
     </div>
@@ -100,7 +100,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="assets/js/script-audio.js"></script>
 </body>
 
 </html>
