--- a/resume.html
+++ b/resume.html
@@ -42,17 +42,17 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="/assets/img/logo.png"></a></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="../desitynikolova.github.io/assets/img/logo.png"></a></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About me</a></li>
-          <li><a class="active" href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
+          <li><a href="/desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
+          <li><a class="active" href="/desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
+          <li><a href="/desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
+          <li><a href="/desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,45 +74,45 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume</h2>
-          <p>My academic and professional background has provided me with a well-rounded skill set that enables me to thrive in any environment. I am confident in my ability to apply my experience and knowledge to drive positive outcomes for any organization.</p>
+          <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</h2>
+          <p onmouseover="readText(this)" onmouseleave="stopRead(this)">My academic and professional background has provided me with a well-rounded skill set that enables me to thrive in any environment. I am confident in my ability to apply my experience and knowledge to drive positive outcomes for any organization.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title" onmouseover="readText(this)" onmouseleave="stopRead(this)">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor's degree, Macroeconomics</h4>
-              <h5>2008 - 2012</h5>
-              <p><em>D.A.Tsenov Academy of Economics</em></p>
+              <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Bachelor's degree, Macroeconomics</h4>
+              <h5 onmouseover="readText(this)" onmouseleave="stopRead(this)">2008 - 2012</h5>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)"><em>D.A.Tsenov Academy of Economics</em></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor's degree, Accounting</h4>
-              <h5>2013 - 2014</h5>
-              <p><em>Matev Stroy</em></p>
+              <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Bachelor's degree, Accounting</h4>
+              <h5 onmouseover="readText(this)" onmouseleave="stopRead(this)">2013 - 2014</h5>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)"><em>Matev Stroy</em></p>
             </div>
             <div class="resume-item">
-              <h4>Master's degree, Business planning</h4>
-              <h5>2013 - 2014</h5>
-              <p><em>D.A.Tsenov Academy of Economics</em></p>
+              <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Master's degree, Business planning</h4>
+              <h5 onmouseover="readText(this)" onmouseleave="stopRead(this)">2013 - 2014</h5>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)"><em>D.A.Tsenov Academy of Economics</em></p>
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title" onmouseover="readText(this)" onmouseleave="stopRead(this)">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Business Analyst at KBC Bank & Verzekering</h4>
-              <h5>2021 - Present</h5>
-              <p><em>Sofia City, Bulgaria </em></p>
+              <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Business Analyst at KBC Bank & Verzekering</h4>
+              <h5 onmouseover="readText(this)" onmouseleave="stopRead(this)">2021 - Present</h5>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)"><em>Sofia City, Bulgaria </em></p>
             </div>
             <div class="resume-item">
-              <h4>Junior Accountant at Cargotec</h4>
-              <h5>2020 - 2021</h5>
-              <p><em>Sofia City, Bulgaria</em></p>
+              <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Junior Accountant at Cargotec</h4>
+              <h5 onmouseover="readText(this)" onmouseleave="stopRead(this)">2020 - 2021</h5>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)"><em>Sofia City, Bulgaria</em></p>
             </div>
             <div class="resume-item">
-              <h4>Accounts Receivable Specialist</h4>
-              <h5>2018 - 2020</h5>
-              <p><em>Sofia City, Bulgaria</em></p>
+              <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Accounts Receivable Specialist</h4>
+              <h5 onmouseover="readText(this)" onmouseleave="stopRead(this)">2018 - 2020</h5>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)"><em>Sofia City, Bulgaria</em></p>
             </div>
           </div>
         </div>
@@ -125,7 +125,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" id="footer-audio" onmouseover="readText(this)" onmouseleave="stopRead(this)">
         &copy; Copyright <strong><span>Desislava Nikolova</span></strong>. All Rights Reserved
       </div>
     </div>
@@ -146,7 +146,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="assets/js/script-audio.js"></script>
 </body>
 
 </html>
