--- a/services.html
+++ b/services.html
@@ -42,17 +42,17 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="/assets/img/logo.png"></a></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="../desitynikolova.github.io/assets/img/logo.png"></a></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About me</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a class="active" href="services.html">Services</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="/desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
+          <li><a href="/desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
+          <li><a href="/desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
+          <li><a class="active" href="/desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
+          <li><a href="/desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,8 +74,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>My Range of Services: Providing Tailored Solutions for Your Unique Business Needs</p>
+          <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</h2>
+          <p onmouseover="readText(this)" onmouseleave="stopRead(this)">My Range of Services: Providing Tailored Solutions for Your Unique Business Needs</p>
         </div>
 
         <div class="row">
@@ -87,8 +87,8 @@
                 </svg>
                 <i class='bx bxs-calculator'></i>
               </div>
-              <h4><a href="">Bookkeeper</a></h4>
-              <p>Accurate Financial Management with Professional Bookkeeping Services</p>
+              <h4><a href="" onmouseover="readText(this)" onmouseleave="stopRead(this)">Bookkeeper</a></h4>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Accurate Financial Management with Professional Bookkeeping Services</p>
             </div>
           </div>
 
@@ -100,8 +100,8 @@
                 </svg>
                 <i class='bx bx-street-view' ></i>
               </div>
-              <h4><a href="">360 Tour</a></h4>
-              <p>Immersive 360 Tours for an Engaging and Interactive Experience</p>
+              <h4><a href="" onmouseover="readText(this)" onmouseleave="stopRead(this)">360 Tour</a></h4>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Immersive 360 Tours for an Engaging and Interactive Experience</p>
             </div>
           </div>
 
@@ -113,8 +113,8 @@
                 </svg>
                 <i class='bx bxs-credit-card-front'></i>
               </div>
-              <h4><a href="">Creating Business Cards</a></h4>
-              <p>Professional Business Card Design for a Lasting Impression</p>
+              <h4><a href="" onmouseover="readText(this)" onmouseleave="stopRead(this)">Creating Business Cards</a></h4>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Professional Business Card Design for a Lasting Impression</p>
             </div>
           </div>
 
@@ -126,8 +126,8 @@
                 </svg>
                 <i class='bx bxl-facebook-circle'></i>
               </div>
-              <h4><a href="">Maintaining Social Pages</a></h4>
-              <p>Expert Management of Your Social Media Channels to Boost Your Online Presence</p>
+              <h4><a href="" onmouseover="readText(this)" onmouseleave="stopRead(this)">Maintaining Social Pages</a></h4>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Expert Management of Your Social Media Channels to Boost Your Online Presence</p>
             </div>
           </div>
 
@@ -139,8 +139,8 @@
                 </svg>
                 <i class='bx bxs-business' ></i>
               </div>
-              <h4><a href="">Business Analysis</a></h4>
-              <p>Strategic Business Analysis for Informed Decision-Making and Optimal Results</p>
+              <h4><a href="" onmouseover="readText(this)" onmouseleave="stopRead(this)">Business Analysis</a></h4>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Strategic Business Analysis for Informed Decision-Making and Optimal Results</p>
             </div>
           </div>
 
@@ -152,8 +152,8 @@
                 </svg>
                 <i class='bx bxs-dollar-circle'></i>
               </div>
-              <h4><a href="">Financial Analyst</a></h4>
-              <p>Insightful Financial Analysis for Informed Investment and Business Decisions</p>
+              <h4><a href="" onmouseover="readText(this)" onmouseleave="stopRead(this)">Financial Analyst</a></h4>
+              <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Insightful Financial Analysis for Informed Investment and Business Decisions</p>
             </div>
           </div>
 
@@ -167,7 +167,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" id="footer-audio" onmouseover="readText(this)" onmouseleave="stopRead(this)">
         &copy; Copyright <strong><span>Desislava Nikolova</span></strong>. All Rights Reserved
       </div>
     </div>
@@ -188,7 +188,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="assets/js/script-audio.js"></script>
 </body>
 
 </html>
