--- a/contact.html
+++ b/contact.html
@@ -42,17 +42,17 @@
   <header id="header" class="fixed-top">
     <div class="container-fluid d-flex justify-content-between align-items-center">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="/assets/img/logo.png"></a></a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html"><img src="../desitynikolova.github.io/assets/img/logo.png"></a></a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About me</a></li>
-          <li><a href="resume.html">Resume</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
+          <li><a href="/desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
+          <li><a href="/desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
+          <li><a href="/desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
+          <li><a href="/desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
+          <li><a class="active" href="/desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -74,8 +74,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Contact me today to learn more about how we can help you achieve your business goals and take your organization to the next level.</p>
+          <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</h2>
+          <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact me today to learn more about how we can help you achieve your business goals and take your organization to the next level.</p>
         </div>
 
     
@@ -86,20 +86,20 @@
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
-                <h4>Location:</h4>
-                <p>Sofia, Bulgaria</p>
+                <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Location:</h4>
+                <p onmouseover="readText(this)" onmouseleave="stopRead(this)">Sofia, Bulgaria</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
-                <h4>Email:</h4>
-                <p>deshevanatoliy@gmail.com</p>
+                <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Email:</h4>
+                <p onmouseover="readText(this)" onmouseleave="stopRead(this)">deshevanatoliy@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+359833924545</p>
+                <h4 onmouseover="readText(this)" onmouseleave="stopRead(this)">Call:</h4>
+                <p onmouseover="readText(this)" onmouseleave="stopRead(this)">+359833924545</p>
               </div>
 
             </div>
@@ -122,7 +122,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <div class="copyright">
+      <div class="copyright" id="footer-audio" onmouseover="readText(this)" onmouseleave="stopRead(this)">
         &copy; Copyright <strong><span>Desislva Nikolova</span></strong>. All Rights Reserved
       </div>
     </div>
@@ -143,7 +143,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
+  <script src="assets/js/script-audio.js"></script>
 </body>
 
 </html>
