--- a/resume.html
+++ b/resume.html
@@ -47,11 +47,11 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="/desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
-          <li><a href="/desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
-          <li><a class="active" href="/desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
-          <li><a href="/desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
-          <li><a href="/desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
+          <li><a href="../desitynikolova.github.io/index.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Home</a></li>
+          <li><a href="../desitynikolova.github.io/about.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">About me</a></li>
+          <li><a class="active" href="../desitynikolova.github.io/resume.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Resume</a></li>
+          <li><a href="../desitynikolova.github.io/services.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Services</a></li>
+          <li><a href="../desitynikolova.github.io/contact.html" onmouseover="readText(this)" onmouseleave="stopRead(this)">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
