--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../desitynikolova.github.io/assets/img/icon.png" rel="icon">
+  <link href="./assets/img/icon.png" rel="icon">
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -68,7 +68,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
-    <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
+    <div class="container d-flex flex-column align-items-center section-title" data-aos="zoom-in" data-aos-delay="100">
       <h1 onmouseover="readText(this)" onmouseleave="stopRead(this)">Anatoliy Deshev</h1>
       <h2 onmouseover="readText(this)" onmouseleave="stopRead(this)">I'm a Business Analyst from Bulgaria</h2>
       <a href="about.html" class="btn-about" onmouseover="readText(this)" onmouseleave="stopRead(this)">About Me</a>
